--- a/pruebas.html
+++ b/pruebas.html
@@ -24,28 +24,30 @@
         }
 
         .contenedor > div {
-            flex-basis: 100%;
             flex-shrink: 1;
+            height: 100px;
         }
 
         .red {
             background-color: red;
+            flex-grow: 2;
         }
 
         .blue {
             background-color: blue;
-            padding: 1rem;
+            flex-grow: 1;
         }
 
         .green {
             background-color: green;
+            flex-grow: 1;
         }
 
     </style>
 </head>
 <body>
     <div class="contenedor">
-        <div class="item red">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit libero, laudantium quaerat labore minus accusamus recusandae nemo tenetur molestias esse cumque veniam. Eos voluptates nesciunt aperiam molestias molestiae ipsum est?red</div>
+        <div class="item red">red</div>
         <div class="item blue">blue</div>
         <div class="item green">green</div>
     </div>
